Add Q : update with material angular

--- a/angular/cinema/src/app/app.component.html
+++ b/angular/cinema/src/app/app.component.html
@@ -1,13 +1,3 @@
-<nav>
-  <a [routerLink]="['/home-page']">Home</a> |
-  <a [routerLink]="['/data-page']">Data</a> |
-  <a [routerLink]="['/how-to-come-page']">How To Come ?</a> |
-  <a [routerLink]="['/movie-page']">Movies</a> |
-  <a [routerLink]="['/profil-page']">Your Profile</a> |
-  <a [routerLink]="['/reservation-page']">Reservation</a> |
-  <a [routerLink]="['/signin-page']">Sign In Now !</a> |
-  <a [routerLink]="['/signup-page']">Sign Up Now !</a> |
-  <a [routerLink]="['/timetable-page']">Session Timetable</a> |
-</nav>
+<app-header></app-header>
 
 <router-outlet></router-outlet>
