Add Q : Essaie GPS ... à abandonner tant que le reste n'est pas fini !

--- a/angular/cinema/src/app/header/header.component.html
+++ b/angular/cinema/src/app/header/header.component.html
@@ -4,15 +4,15 @@
             <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
                 <mat-icon>menu</mat-icon>
             </button>
-            <a mat-button [routerLink]="['/home-page']">Home</a> |
-            <a mat-button [routerLink]="['/data-page']">Data</a> |
-            <a mat-button [routerLink]="['/how-to-come-page']">How To Come ?</a> |
-            <a mat-button [routerLink]="['/movie-page']">Movies</a> |
-            <a mat-button [routerLink]="['/profil-page']">Your Profile</a> |
-            <a mat-button [routerLink]="['/reserFvation-page']">Reservation</a> |
-            <a mat-button [routerLink]="['/signin-page']">Sign In Now !</a> |
-            <a mat-button [routerLink]="['/signup-page']">Sign Up Now !</a> |
-            <a mat-button [routerLink]="['/timetable-page']">Session Timetable</a>
+            <a mat-stroked-button color="" [routerLink]="['/home-page']">Home</a>
+            <a mat-stroked-button color="" [routerLink]="['/data-page']">Data</a>
+            <a mat-stroked-button color="" [routerLink]="['/how-to-come-page']">How To Come ?</a>
+            <a mat-stroked-button color="" [routerLink]="['/movie-page']">Movies</a>
+            <a mat-stroked-button color="" [routerLink]="['/profil-page']">Your Profile</a>
+            <a mat-stroked-button color="" [routerLink]="['/reserFvation-page']">Reservation</a>
+            <a mat-stroked-button color="" [routerLink]="['/signin-page']">Sign In Now !</a>
+            <a mat-stroked-button color="" [routerLink]="['/signup-page']">Sign Up Now !</a>
+            <a mat-stroked-button color="" [routerLink]="['/timetable-page']">Session Timetable</a>
         </div>
     </mat-toolbar>
     <!-- <nav>
@@ -26,6 +26,5 @@
         <a [routerLink]="['/signup-page']">Sign Up Now !</a> |
         <a [routerLink]="['/timetable-page']">Session Timetable</a> |
     </nav> -->
-
     <p>header works!</p>
 </header>
