--- a/angular/cinema/src/app/how-to-come/how-to-come.component.html
+++ b/angular/cinema/src/app/how-to-come/how-to-come.component.html
@@ -1,1 +1,8 @@
 <p>how-to-come works!</p>
+
+<div class="map-container">
+    <div class="map-frame">
+      <div id="map"></div>
+    </div>
+  </div>
+  
