--- a/angular/cinema/src/app/sign-up/sign-up.component.html
+++ b/angular/cinema/src/app/sign-up/sign-up.component.html
@@ -1,1 +1,61 @@
-<p>sign-up works!</p>
+<div class="">
+    <h1>FORMULAIRE D'INSCRIPTION</h1>
+    <h2>Renseigner les éléments ci-dessous</h2>
+  </div>
+  <p class ="">Pseudo</p>
+  <mat-form-field appearance="fill">
+    <mat-label>Pseudo</mat-label>
+    <input matInput>
+  </mat-form-field>
+  
+  <mat-form-field appearance="fill">
+    <mat-label>Confirmer Pseudo</mat-label>
+    <input matInput>
+  </mat-form-field>
+  <br>
+
+<mat-form-field appearance="fill">
+    <mat-label>Enter your password</mat-label>
+    <input matInput [type]="hide ? 'password' : 'text'">
+    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+    </button>
+</mat-form-field>
+
+<p class ="">Email</p><br>
+
+<div class="example-container">
+    <mat-form-field appearance="fill">
+      <mat-label>Enter your email</mat-label>
+      <input matInput placeholder="pat@example.com" [formControl]="email" required>
+      <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+    </mat-form-field>
+  </div>
+
+<br><br><br><br><br><br><br>
+
+<div class="">
+    <form onsubmit="">
+    
+
+      
+      <div class="">
+        <p class ="">Email</p>
+        <input id="email" type="text" name="email" placeholder="email ..."/>
+      </div>
+
+      <div class="">
+        <p class ="">Confirmation Email</p>
+        <input id="confirm-email" type="text" name="confirm-email" placeholder="Confirmer email ..."/>
+      </div> 
+      <div class="">
+        <p class ="">Mot de Passe</p>
+        <input id="motdepasse" type="password" name="motdepasse" placeholder="Saisir Mot de Passe ..."/>
+      </div>    
+      <div class="">
+        <p class ="">Confirmer Mot de passe</p>
+        <input id="confirm-motdepasse" type="password" name="confirm-motdepasse" placeholder="Saisir Mot de Passe ..."/>
+      </div> 
+      <input type="submit" id='submit' value='Valider' >       
+    </form>
+</div> 
