--- a/angular/cinema/src/app/sign-in/sign-in.component.html
+++ b/angular/cinema/src/app/sign-in/sign-in.component.html
@@ -1,1 +1,29 @@
 <p>sign-in works!</p>
+
+<div class="">
+    <form class="" method="POST">
+
+        <h1 class="">Connexion</h1>
+        
+        <mat-label><b>Nom d'utilisateur</b></mat-label>
+        <input type="text" placeholder="Entrez votre pseudo" name="pseudo" required>
+
+        <label><b>Mot de passe</b></label>
+        <input type="password" placeholder="Entrer votre mot de passe" name="password" required>
+
+        <input type="submit" value='LOGIN'>
+        
+    </form>
+</div>
+
+<form class="example-form">
+    <mat-form-field class="example-full-width">
+      <mat-label>Favorite food</mat-label>
+      <input matInput placeholder="Ex. Pizza" value="Sushi">
+    </mat-form-field>
+  
+    <mat-form-field class="example-full-width">
+      <mat-label>Leave a comment</mat-label>
+      <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
+    </mat-form-field>
+  </form>
