Add Q : observable DONE !!! tested on Movie Get and Post !!!

--- a/angular/cinema/src/app/movie/movie.component.html
+++ b/angular/cinema/src/app/movie/movie.component.html
@@ -1,1 +1,6 @@
 <p>movie works!</p>
+
+<div *ngFor="let movie of movies">{{movie | json}}</div>
+
+
+<mat-button-toggle (click)="post()">CLICK TO TEST</mat-button-toggle>
