--- a/angular/cinema/src/app/sign-in/sign-in.component.html
+++ b/angular/cinema/src/app/sign-in/sign-in.component.html
@@ -1,29 +1,27 @@
 <p>sign-in works!</p>
 
-<div class="">
-    <form class="" method="POST">
-
-        <h1 class="">Connexion</h1>
-        
-        <mat-label><b>Nom d'utilisateur</b></mat-label>
-        <input type="text" placeholder="Entrez votre pseudo" name="pseudo" required>
-
-        <label><b>Mot de passe</b></label>
-        <input type="password" placeholder="Entrer votre mot de passe" name="password" required>
-
-        <input type="submit" value='LOGIN'>
-        
-    </form>
-</div>
-
-<form class="example-form">
-    <mat-form-field class="example-full-width">
-      <mat-label>Favorite food</mat-label>
-      <input matInput placeholder="Ex. Pizza" value="Sushi">
+<form class="SignInform" [formGroup]="myForm" (ngSubmit)="onSubmit()">
+    
+    <mat-form-field appearance="fill">
+        <mat-label>Pseudo</mat-label>
+        <input matInput formControlName="pseudo" matInput placeholder="Votre speudo">
     </mat-form-field>
-  
-    <mat-form-field class="example-full-width">
-      <mat-label>Leave a comment</mat-label>
-      <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Enter your password</mat-label>
+        <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" matInput placeholder="Votre mot de passe">>
+        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
     </mat-form-field>
-  </form>
+
+    <mat-form-field appearance="fill">
+        <button mat-stroked-button type="submit" style="width:100%">Submitt</button>
+    </mat-form-field>
+    
+</form>
+
+<mat-form-field appearance="fill">
+    <mat-label>Pseudo</mat-label>
+    <input matInput>
+</mat-form-field>
