Add Q : debug form

--- a/angular/cinema/src/app/component/header/header.component.html
+++ b/angular/cinema/src/app/component/header/header.component.html
@@ -9,7 +9,7 @@
             <a mat-stroked-button color="" [routerLink]="['/how-to-come-page']">How To Come ?</a>
             <a mat-stroked-button color="" [routerLink]="['/movie-page']">Movies</a>
             <a mat-stroked-button color="" [routerLink]="['/profil-page']">Your Profile</a>
-            <a mat-stroked-button color="" [routerLink]="['/reserFvation-page']">Reservation</a>
+            <a mat-stroked-button color="" [routerLink]="['/reservation-page']">Reservation</a>
             <a mat-stroked-button color="" [routerLink]="['/signin-page']">Sign In Now !</a>
             <a mat-stroked-button color="" [routerLink]="['/signup-page']">Sign Up Now !</a>
             <a mat-stroked-button color="" [routerLink]="['/timetable-page']">Session Timetable</a>
