--- a/angular/cinema/src/app/component/sign-in/sign-in.component.html
+++ b/angular/cinema/src/app/component/sign-in/sign-in.component.html
@@ -1,11 +1,29 @@
 <p>sign-in works!</p>
-
-<form class="SignInform" [formGroup]="myForm" (ngSubmit)="onSubmit()">
-    
+<div>
     <mat-form-field appearance="fill">
         <mat-label>Pseudo</mat-label>
-        <input matInput formControlName="pseudo" matInput placeholder="Votre speudo">
+        <input matInput>
     </mat-form-field>
+</div>
+<div>
+    <mat-form-field appearance="fill">
+        <mat-label>Enter your password</mat-label>
+        <input matInput [type]="hide ? 'password' : 'text'">
+        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+            [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+    </mat-form-field>
+</div>
+
+
+<div>
+        <button mat-stroked-button (click)="onSubmit()">Submit</button>
+</div>
+<!-- 
+<form class="SignInform" [formGroup]="myForm" (ngSubmit)="onSubmit()">
+    
+
 
     <mat-form-field appearance="fill">
         <mat-label>Enter your password</mat-label>
@@ -24,4 +42,4 @@
 <mat-form-field appearance="fill">
     <mat-label>Pseudo</mat-label>
     <input matInput>
-</mat-form-field>
+</mat-form-field> -->
