ADD Q : more create movie

--- a/angular/cinema/src/app/component/movie/create-movie/create-movie.component.html
+++ b/angular/cinema/src/app/component/movie/create-movie/create-movie.component.html
@@ -7,7 +7,7 @@
 <div>
     <mat-form-field appearance="fill" >
         <mat-label>Title</mat-label>
-        <input matInput name='title' [(ngModel)]="movieJSON.title">
+        <input matInput name='title' [(ngModel)]="movieJSON.title" required>
     </mat-form-field>
 </div>
 <div>
