Add Q : update / delete movie done

--- a/angular/cinema/src/app/component/movie/create-movie/create-movie.component.html
+++ b/angular/cinema/src/app/component/movie/create-movie/create-movie.component.html
@@ -25,7 +25,7 @@
 <div>
     <mat-form-field appearance="fill">
         <mat-label>Release Year</mat-label>
-        <input matInput name='releaseYear' [(ngModel)]="movieJSON.releaseYear">
+        <input matInput name='releaseDate' [(ngModel)]="movieJSON.releaseDate">
     </mat-form-field>
 </div>
 <div>
