--- a/angular/cinema/src/app/component/movie/delete-movie/delete-movie.component.html
+++ b/angular/cinema/src/app/component/movie/delete-movie/delete-movie.component.html
@@ -1,1 +1,14 @@
 <p>delete-movie works!</p>
+
+<mat-form-field appearance="fill">
+    <mat-label>Movie to Update</mat-label>
+    <mat-select [(value)]="selectedMovie">
+      <mat-option *ngFor="let movie of movies" [value]="movie">
+        {{movie.title}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <form (ngSubmit)="onSubmit()">
+    <button mat-button type="submit">TEST SUBMIT</button>
+    </form>
