--- a/angular/cinema/src/app/component/header/header.component.html
+++ b/angular/cinema/src/app/component/header/header.component.html
@@ -34,20 +34,20 @@
     <div [hidden]="!currentPage[3]">
         <a mat-stroked-button color="" [routerLink]="['/movie-page']">Movies</a>
         <a mat-stroked-button color="" [routerLink]="['/movie-page/create']">Create Movie</a>
-        <a mat-stroked-button color="" [routerLink]="['/movie-page']">Update Movie</a>
-        <a mat-stroked-button color="" [routerLink]="['/movie-page']">Delete Movie</a>
+        <a mat-stroked-button color="" [routerLink]="['/movie-page/update']">Update Movie</a>
+        <a mat-stroked-button color="" [routerLink]="['/movie-page/delete']">Delete Movie</a>
     </div>
     <div [hidden]="!currentPage[4]">
         <a mat-stroked-button color="" [routerLink]="['/profil-page']">Profil Person</a>
-        <a mat-stroked-button color="" [routerLink]="['/profil-page']">Create Profil</a>
-        <a mat-stroked-button color="" [routerLink]="['/profil-page']">Update Profil</a>
-        <a mat-stroked-button color="" [routerLink]="['/profil-page']">Delete Profil</a>
+        <a mat-stroked-button color="" [routerLink]="['/profil-page/create']">Create Profil</a>
+        <a mat-stroked-button color="" [routerLink]="['/profil-page/update']">Update Profil</a>
+        <a mat-stroked-button color="" [routerLink]="['/profil-page/delete']">Delete Profil</a>
     </div>
     <div [hidden]="!currentPage[5]">
         <a mat-stroked-button color="" [routerLink]="['/reservation-page']">Reservation</a>
-        <a mat-stroked-button color="" [routerLink]="['/reservation-page']">Create Reservation</a>
-        <a mat-stroked-button color="" [routerLink]="['/reservation-page']">Update Reservation</a>
-        <a mat-stroked-button color="" [routerLink]="['/reservation-page']">Delete Reservation</a>
+        <a mat-stroked-button color="" [routerLink]="['/reservation-page/create']">Create Reservation</a>
+        <a mat-stroked-button color="" [routerLink]="['/reservation-page/update']">Update Reservation</a>
+        <a mat-stroked-button color="" [routerLink]="['/reservation-page/delete']">Delete Reservation</a>
     </div>
     <div [hidden]="!currentPage[6]">
         <a mat-stroked-button color="" [routerLink]="['/signin-page']">Sign In !!!</a>
@@ -56,16 +56,16 @@
         <a mat-stroked-button color="" [routerLink]="['/signin-page']">Delete User</a>
     </div>
     <div [hidden]="!currentPage[7]">
-        <a mat-stroked-button color="" [routerLink]="['/signup-page']">Movies</a>
+        <a mat-stroked-button color="" [routerLink]="['/signup-page']">Sign Up !!!</a>
         <a mat-stroked-button color="" [routerLink]="['/signup-page']">Create User</a>
         <a mat-stroked-button color="" [routerLink]="['/signup-page']">Update User</a>
         <a mat-stroked-button color="" [routerLink]="['/signup-page']">Delete User</a>
     </div>
     <div [hidden]="!currentPage[8]">
         <a mat-stroked-button color="" [routerLink]="['/timetable-page']">Séance</a>
-        <a mat-stroked-button color="" [routerLink]="['/timetable-page']">Create Séance</a>
-        <a mat-stroked-button color="" [routerLink]="['/timetable-page']">Update Séance</a>
-        <a mat-stroked-button color="" [routerLink]="['/timetable-page']">Delete Séance</a>
+        <a mat-stroked-button color="" [routerLink]="['/timetable-page/create']">Create Séance</a>
+        <a mat-stroked-button color="" [routerLink]="['/timetable-page/update']">Update Séance</a>
+        <a mat-stroked-button color="" [routerLink]="['/timetable-page/delete']">Delete Séance</a>
     </div>
     </mat-toolbar>
 
