--- a/angular/cinema/src/app/component/sign-in/sign-in.component.html
+++ b/angular/cinema/src/app/component/sign-in/sign-in.component.html
@@ -1,17 +1,18 @@
-<p>sign-in works!</p>
-
 <form (ngSubmit)="onSubmit()">
     
     <div>
+        <mat-error>{{verifForm()}}</mat-error>
         <mat-form-field appearance="fill">
             <mat-label>Pseudo</mat-label>
-            <input matInput name='pseudo' [(ngModel)]="signInJSON.pseudo">
+            <input matInput placeholder="Pseudo#44(id)" matInput name='pseudo' [(ngModel)]="signInJSON.pseudo" required>
         </mat-form-field>
+        
     </div>
+
     <div>
         <mat-form-field appearance="fill">
             <mat-label>Enter your password</mat-label>
-            <input matInput name='pwd' [(ngModel)]="signInJSON.pwd" [type]="hide ? 'password' : 'text'">
+            <input matInput name='pwd' [(ngModel)]="signInJSON.pwd" [type]="hide ? 'password' : 'text'" required>
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                 [attr.aria-pressed]="hide">
                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -21,7 +22,11 @@
 
 
     <div>
-        <button mat-button type="submit">Connection</button>
+        <button mat-button type="submit">Login</button>
+    </div>
+
+    <div>
+        <p>{{login()}}</p>
     </div>
 
 </form>
