Add Q : add many create update delete

--- a/angular/cinema/src/app/component/header/header.component.html
+++ b/angular/cinema/src/app/component/header/header.component.html
@@ -18,7 +18,7 @@
         </div>
     </mat-toolbar>
 
-    <mat-toolbar  color="primary">
+    <!-- <mat-toolbar  color="primary">
     <div [hidden]="!currentPage[0]">
         <a mat-stroked-button color="" [routerLink]="['/home-page']">Home</a>
         <a mat-stroked-button color="" [routerLink]="['/home-page']">Dernière News</a>
@@ -67,7 +67,7 @@
         <a mat-stroked-button color="" [routerLink]="['/timetable-page/update']">Update Séance</a>
         <a mat-stroked-button color="" [routerLink]="['/timetable-page/delete']">Delete Séance</a>
     </div>
-    </mat-toolbar>
+    </mat-toolbar> -->
 
     <p>header works!</p>
 </header>
