--- a/angular/cinema/src/app/component/profil/update-profil/update-profil.component.html
+++ b/angular/cinema/src/app/component/profil/update-profil/update-profil.component.html
@@ -1,1 +1,49 @@
 <p>update-profil works!</p>
+<mat-form-field appearance="fill">
+    <mat-label>Person to Update</mat-label>
+    <mat-select [(value)]="selectedPerson">
+        <mat-option *ngFor="let person of persons" [value]="person">
+            {{person.familyName}} {{person.firstName}}
+        </mat-option>
+    </mat-select>
+</mat-form-field>
+
+<form (ngSubmit)="onSubmit()">
+    <div>
+        <mat-form-field appearance="fill">
+            <mat-label>Family Name</mat-label>
+            <input matInput name='familyName' [(ngModel)]="selectedPerson.familyName" required>
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field appearance="fill">
+            <mat-label>First Name</mat-label>
+            <input matInput name='firstName' [(ngModel)]="selectedPerson.firstName">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field appearance="fill">
+            <mat-label>BirthDate</mat-label>
+            <input matInput name='birthdate' type=date [(ngModel)]="selectedPerson.birthdate">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field appearance="fill">
+            <mat-label>Genre/Sexe/Self</mat-label>
+            <input matInput name='genre' [(ngModel)]="selectedPerson.genre">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field appearance="fill">
+            <mat-label>Duration</mat-label>
+            <input matInput name='city' [(ngModel)]="selectedPerson.city">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field appearance="fill">
+            <mat-label>Email</mat-label>
+            <input matInput name='email' [(ngModel)]="selectedPerson.email">
+        </mat-form-field>
+    </div>
+    <button mat-button type="submit">TEST SUBMIT</button>
+</form>
