--- a/angular/cinema/src/app/component/reservation/create-reservation/create-reservation.component.html
+++ b/angular/cinema/src/app/component/reservation/create-reservation/create-reservation.component.html
@@ -1,1 +1,30 @@
 <p>create-reservation works!</p>
+<form (ngSubmit)="onSubmit()">
+    <div>
+        <mat-form-field appearance="fill">
+            <mat-label>User ID</mat-label>
+            <input matInput name='idUser' [(ngModel)]="reservationJSON.idUser" required>
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field appearance="fill">
+            <mat-label>SEAT ID</mat-label>
+            <input matInput name='idSeat' [(ngModel)]="reservationJSON.idSeat">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field appearance="fill">
+            <mat-label>DATE</mat-label>
+            <input matInput name='date' [matDatepicker]="picker" [(ngModel)]="reservationJSON.date">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field appearance="fill">
+            <mat-label>TIME</mat-label>
+            <input matInput name='date' type='time' [(ngModel)]="reservationJSON.time">
+        </mat-form-field>
+    </div>
+    <button mat-button type="submit">TEST SUBMIT</button>
+</form>
