--- a/angular/cinema/src/app/component/reservation/delete-reservation/delete-reservation.component.html
+++ b/angular/cinema/src/app/component/reservation/delete-reservation/delete-reservation.component.html
@@ -1,1 +1,13 @@
 <p>delete-reservation works!</p>
+<mat-form-field appearance="fill">
+    <mat-label>Movie to Delete</mat-label>
+    <mat-select [(value)]="selectedReservation">
+      <mat-option *ngFor="let reservation of reservations" [value]="reservation">
+        {{reservation | json}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <form (ngSubmit)="onSubmit()">
+    <button mat-button type="submit">TEST SUBMIT</button>
+    </form>
