--- a/angular/cinema/src/app/component/time-table/delete-time-table/delete-time-table.component.html
+++ b/angular/cinema/src/app/component/time-table/delete-time-table/delete-time-table.component.html
@@ -1,1 +1,13 @@
 <p>delete-time-table works!</p>
+<mat-form-field appearance="fill">
+    <mat-label>Session to Delete</mat-label>
+    <mat-select [(value)]="selectedSession">
+      <mat-option *ngFor="let session of sessions" [value]="session">
+        {{session | json}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <form (ngSubmit)="onSubmit()">
+    <button mat-button type="submit">TEST SUBMIT</button>
+    </form>
