--- a/angular/cinema/src/app/component/header/header.component.html
+++ b/angular/cinema/src/app/component/header/header.component.html
@@ -11,14 +11,14 @@
             <a mat-stroked-button color="" [routerLink]="['/movie-page']" (click)="updatePage(3)">Movies</a>
             <a mat-stroked-button color="" [routerLink]="['/profil-page']" (click)="updatePage(4)">Your Profile</a>
             <a mat-stroked-button color="" [routerLink]="['/reservation-page']" (click)="updatePage(5)">Reservation</a>
-            <a mat-stroked-button color="" [routerLink]="['/signin-page']" (click)="updatePage(6)">Sign In Now !</a>
-            <a mat-stroked-button color="" [routerLink]="['/signup-page']" (click)="updatePage(7)">Sign Up Now !</a>
+            <a mat-stroked-button color="" [routerLink]="['/user-page/signin']" (click)="updatePage(6)">Sign In Now !</a>
+            <a mat-stroked-button color="" [routerLink]="['/user-page/signup']" (click)="updatePage(7)">Sign Up Now !</a>
             <a mat-stroked-button color="" [routerLink]="['/timetable-page']" (click)="updatePage(8)">Session
                 Timetable</a>
         </div>
     </mat-toolbar>
 
-    <!-- <mat-toolbar  color="primary">
+    <mat-toolbar  color="primary">
     <div [hidden]="!currentPage[0]">
         <a mat-stroked-button color="" [routerLink]="['/home-page']">Home</a>
         <a mat-stroked-button color="" [routerLink]="['/home-page']">Dernière News</a>
@@ -67,7 +67,8 @@
         <a mat-stroked-button color="" [routerLink]="['/timetable-page/update']">Update Séance</a>
         <a mat-stroked-button color="" [routerLink]="['/timetable-page/delete']">Delete Séance</a>
     </div>
-    </mat-toolbar> -->
+    </mat-toolbar>
+
 
     <p>header works!</p>
 </header>
