--- a/angular/cinema/src/app/component/movie/movie.component.html
+++ b/angular/cinema/src/app/component/movie/movie.component.html
@@ -1,14 +1,26 @@
 <p>movie works!</p>
 <div>
-<mat-tab-group>
-    <mat-tab label="Movie">
-        <div *ngFor="let movie of movies">{{movie | json}}</div>
+    <mat-tab-group>
+        <mat-tab label="Movie">
+            <div *ngFor="let movie of movies">{{movie | json}}</div>
 
 
-        <mat-button-toggle (click)="post()">CLICK TO TEST</mat-button-toggle>
-    </mat-tab>
-    <mat-tab label="Create Movie"> <app-create-movie></app-create-movie> </mat-tab>
-    <mat-tab label="Update Movie"> <app-update-movie></app-update-movie> </mat-tab>
-    <mat-tab label="Delete Movie"> <app-delete-movie></app-delete-movie> </mat-tab>
-</mat-tab-group>
+            <mat-button-toggle (click)="post()">CLICK TO TEST</mat-button-toggle>
+        </mat-tab>
+
+
+
+
+
+        
+        <mat-tab label="Create Movie">
+            <app-create-movie></app-create-movie>
+        </mat-tab>
+        <mat-tab label="Update Movie">
+            <app-update-movie></app-update-movie>
+        </mat-tab>
+        <mat-tab label="Delete Movie">
+            <app-delete-movie></app-delete-movie>
+        </mat-tab>
+    </mat-tab-group>
 </div>
