--- a/angular/cinema/src/app/component/data/data.component.html
+++ b/angular/cinema/src/app/component/data/data.component.html
@@ -1,1 +1,21 @@
 <p>data works!</p>
+<mat-tab-group>
+        <mat-tab label="Data">
+           Data
+        </mat-tab>
+
+
+
+
+
+        
+        <mat-tab label="Create Data">
+            Data
+        </mat-tab>
+        <mat-tab label="Update Data">
+            Data
+        </mat-tab>
+        <mat-tab label="Delete Data">
+            Data
+        </mat-tab>
+    </mat-tab-group>
