--- a/angular/cinema/src/app/component/home/home.component.html
+++ b/angular/cinema/src/app/component/home/home.component.html
@@ -1,1 +1,21 @@
 <p>home works!</p>
+<mat-tab-group>
+    <mat-tab label="Home">
+        Home
+    </mat-tab>
+
+
+
+
+
+    
+    <mat-tab label="Dernière News">
+        Home
+    </mat-tab>
+    <mat-tab label="Dernière Sortie">
+        Home
+    </mat-tab>
+    <mat-tab label="Promotions !">
+        Home
+    </mat-tab>
+</mat-tab-group>
