--- a/angular/cinema/src/app/component/profil/profil.component.html
+++ b/angular/cinema/src/app/component/profil/profil.component.html
@@ -1,7 +1,22 @@
 <p>profil works!</p>
 
+<mat-tab-group>
+    <mat-tab label="Profil">
+        <div *ngFor="let person of persons">{{person | json}}</div>
+    </mat-tab>
 
 
-<div *ngFor="let person of persons">{{person | json}}</div>
 
 
+
+    
+    <mat-tab label="Create Profil">
+        <app-create-profil></app-create-profil>
+    </mat-tab>
+    <mat-tab label="Update Profil">
+        <app-update-profil></app-update-profil>
+    </mat-tab>
+    <mat-tab label="Delete Profil">
+        <app-delete-profil></app-delete-profil>
+    </mat-tab>
+</mat-tab-group>
