Add Q ; beautify movies

--- a/angular/cinema/src/styles.scss
+++ b/angular/cinema/src/styles.scss
@@ -3,5 +3,12 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+@media only screen and (min-width: 1440px) {
+    body {
+      width: 1040px ;
+      margin: auto ;
+    }
+  }
+
 // /* Importing Bootstrap SCSS file. */
 // @import '~bootstrap/scss/bootstrap';
