Travail sur User Routing + Tabs + Affichage des users dans tab User en tableau + Delete by Id

--- a/angular/cinema/src/app/component/header/header.component.html
+++ b/angular/cinema/src/app/component/header/header.component.html
@@ -6,15 +6,14 @@
             </button>
             <a mat-stroked-button color="" [routerLink]="['/home-page']" (click)="updatePage(0)">Home</a>
             <a mat-stroked-button color="" [routerLink]="['/data-page']" (click)="updatePage(1)">Data</a>
-            <a mat-stroked-button color="" [routerLink]="['/how-to-come-page']" (click)="updatePage(2)">How To Come
-                ?</a>
+            <a mat-stroked-button color="" [routerLink]="['/how-to-come-page']" (click)="updatePage(2)">How To Come ?</a>
             <a mat-stroked-button color="" [routerLink]="['/movie-page']" (click)="updatePage(3)">Movies</a>
             <a mat-stroked-button color="" [routerLink]="['/profil-page']" (click)="updatePage(4)">Your Profile</a>
             <a mat-stroked-button color="" [routerLink]="['/reservation-page']" (click)="updatePage(5)">Reservation</a>
             <a mat-stroked-button color="" [routerLink]="['/user-page/signin']" (click)="updatePage(6)">Sign In Now !</a>
             <a mat-stroked-button color="" [routerLink]="['/user-page/signup']" (click)="updatePage(7)">Sign Up Now !</a>
-            <a mat-stroked-button color="" [routerLink]="['/timetable-page']" (click)="updatePage(8)">Session
-                Timetable</a>
+            <a mat-stroked-button color="" [routerLink]="['/timetable-page']" (click)="updatePage(8)">Session</a>
+            <a mat-stroked-button color="" [routerLink]="['/user-page/']" (click)="updatePage(9)">User</a>
         </div>
     </mat-toolbar>
 
